k8s/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skipa-backend
  namespace: skala3-finalproj-class2-team8
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: skipa-backend
  template:
    metadata:
      labels:
        app: skipa-backend
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - name: skipa-backend
          image: amdp-registry.skala-ai.com/skala26a-ai2/skipa-backend:dev-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20

          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
